--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -62,6 +62,40 @@ section {
 	margin: 50px 0
 }
 
+/* style de button  */
+.filtres{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding:45px ;
+	flex-shrink: 0;
+	gap: 8px;
+}
+.btn{
+	border-radius: 3.75rem;
+	border: 1px solid #1D6154 ;
+	background: #FFFEF8;
+	padding: 15px;
+	cursor: pointer
+	;
+/* style de text  */
+	text-align: center;
+	font-family: Syne;
+	font-size: 1rem;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+	color: #1D6154;
+}
+.btn:active {
+	color: #FFFEF8;
+	background:#1D6154 ;
+}
+
+a {
+	text-decoration: none;
+  }
+
 h1{
 	display: flex;
 	flex-direction: column;
