--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -23,6 +23,9 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+*{
+	box-sizing: border-box;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -220,3 +223,24 @@ footer nav ul {
 	margin: 2em
 }
 
+/* style de modal */
+.modal {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.8);
+}
+.modal-wrapper{
+	width: 600px;
+	padding: 20px;
+	max-width: calc(100vw-20px);
+	max-height: calc(100vh -20px);
+	overflow: auto;
+	background: #FFF;
+	
+}
