--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -131,6 +131,12 @@ nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
 }
+nav a {
+	color: #000;
+}
+nav a:hover{
+	color: #B1663C;
+}
 
 li:hover {
 	color: #B1663C;
@@ -161,6 +167,8 @@ li:hover {
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
+	display: inline;
+	
 }
 .gallery {
 	width: 100%;
@@ -172,15 +180,15 @@ li:hover {
 
 .gallery img {
 	width: 100%;
-
+	
 }
 #contact {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
 #contact > * {
 	text-align: center;
-
+	
 }
 #contact h2{
 	margin-bottom: 20px;
@@ -222,8 +230,24 @@ footer nav ul {
 	justify-content: flex-end;
 	margin: 2em
 }
+.conteneur{
+	display: flex;
+	align-items: baseline;
+	justify-content: center;
+	gap: 10px;
+}
+
+.conteneur a{	
+	color: black;
+	font-size: 14px;
+	font-family: 'Work Sans';
+	font-weight: 400;
+	word-wrap: break-word
+}
+
 
 /* style de modal */
+
 .modal {
 	display: flex;
 	align-items: center;
@@ -235,12 +259,204 @@ footer nav ul {
 	height: 100%;
 	background: rgba(0, 0, 0, 0.8);
 }
+
+.modal H1{
+	color: #000;
+	text-align: center;
+	font-family: "Work Sans";
+	font-size: 1.625rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	padding: 20px;
+}
+
+.js-modal{
+	color: black;
+}
+
 .modal-wrapper{
 	width: 600px;
-	padding: 20px;
+	padding: 25px;
 	max-width: calc(100vw-20px);
 	max-height: calc(100vh -20px);
 	overflow: auto;
+	border-radius: 0.625rem;
 	background: #FFF;
+	position: relative;
 	
+	
+}
+.gallery-modal{
+	padding: 20px;
+	margin: auto;
+	width: 80%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+	
+}
+.js-modal-close{
+	position: absolute;
+	right: 12px;
+	background: white;
+	border: none;
+	cursor: pointer;
+}
+.gallery-modal figure{
+	position: relative;
+}
+.gallery-modal img {
+	width: 100%;
+	/* position: relative; */
+}
+figure .js-modal-delete{
+	position: absolute;
+	right: 5px;
+	top: 5px;
+}
+.ligne-modal{
+	width: 100%; 
+	height: 100%; 
+	border: 1px #B3B3B3 solid;
+}
+.CFO{
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	margin : 2em auto ;
+	width: 180px;
+	height: 50px;
+	text-align: center;
+	border-radius: 60px ;
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+
+/* style modal 2  */
+.modal2 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.8);
+}
+
+.modal-wrapper2{
+	width: 600px;
+	padding: 25px;
+	max-width: calc(100vw-20px);
+	max-height: calc(100vh -20px);
+	overflow: auto;
+	border-radius: 0.625rem;
+	background: #FFF;
+	position: relative;
+	
+	
+}
+form{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	margin: auto;
+	gap: 12px;
+}
+form label{
+	text-align: start;
+}
+form input{
+	background: #FFF;
+	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+	
+	width: 26.25rem;
+	height: 3.1875rem;
+	flex-shrink: 0;
+	border: none;
+	
+}
+.input-image{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	width: 26.25rem;
+	height: 10.5625rem;
+	flex-shrink: 0;
+	border-radius: 0.1875rem;
+	background: #E8F1F6;
+}
+.input-image p {
+	color: #444;
+	text-align: center;
+	font-family: "Work Sans";
+	font-size: 0.625rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+.input-image input{
+	width: 10.8125rem;
+height: 2.25rem;
+flex-shrink: 0;
+border-radius: 3.125rem;
+background: #CBD6DC;
+display: flex;
+justify-content: center;
+align-items: center;
+
+color: #306685;
+text-align: center;
+font-family: "Work Sans";
+font-size: 0.875rem;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+
+.fa-image{
+	color: #B9C5CC;
+	color: #B9C5CC;
+	font-size: 75px;
+	width: 4.75rem;
+	height: 4.75rem;
+	flex-shrink: 0;
+}
+form select{
+	background: #FFF;
+	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+	
+	width: 26.25rem;
+	height: 3.1875rem;
+	flex-shrink: 0;
+	border: none;
+}
+.modal2 h1{
+	color: #000;
+	text-align: center;
+	font-family: "Work Sans";
+	font-size: 1.625rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	padding: 20px;
+}
+.js-modal-back{
+	position: absolute;
+	left: 12px;
+	background: white;
+	border: none;
+	cursor: pointer;
 }
